--- a/clhz_cn_protocol.html
+++ b/clhz_cn_protocol.html
@@ -1,4 +1,4 @@
-  <![CDATA[
+﻿<!DOCTYPE html>
         <p>\t\t请务必认真阅读和理解本《软件许可使用协议》（以下简称《协议》）中规定的所有权利和限制。除非您接受本《协议》条款，否则您无权下载、安装或使用本软件及其相关服务。您一旦安装、复制、下载、访问或以其它方式使用本软件产品，将视为对本《协议》的接受，即表示您同意接受本《协议》各项条款的约束。如果您不同意本《协议》中的条款，请不要安装、复制或使用本软件。</p>
         <h3>1.权利声明</h3>
         <p>\t\t本软件的一切知识产权，以及与软件相关的所有信息内容，包括但不限于：文字表述及其组合、图标、图饰、图像、图表、色彩、界面设计、版面框架、有关数据、附加程序、印刷材料或电子文档等均为开发者所有，受著作权法和国际著作权条约以及其他知识产权法律法规的保护。</p>
@@ -15,4 +15,4 @@
 	<br>
 本应用采用爬虫技术，将互联网上的资源整合到App内。方便搜索查找，仅供学习资料和影视娱乐，请合理使用。本应用可以结合第三方播放器（如迅雷）使用，部分国家和地区禁止使用迅雷等P2P技术请勿使用本软件，<b><font color="red">本应用所有的资源链接采自DHT网络，不存放任何资源文件，也不提供任何资源的下载，如果涉及互联网侵权问题，请联系源网站，开发者不承担任何法律责任。</font> </b>
 </p>
-        ]]>
+</html>
