--- a/clhz_cn_protocol.html
+++ b/clhz_cn_protocol.html
@@ -11,7 +11,7 @@
         <h3>4.用户使用须知</h3>
         <p>4.1软件功能：本软件工作原理类似于浏览器，内容解析自基于DHT协议的BT资源搜索引擎网站，所有资源来源于对端网站爬虫24小时从DHT网络自动抓取，所有排行数据由程序自动生成。我们不存储任何资源和种子文件，只索引种子meta信息并提供搜索服务。</p>
         <h3>5.免责声明</h3>
-         <p>本软件不存储任何合理统计数据之外的数据，也不存储用户的任何隐私信息，<b><font color="red">所有内容均来源于互联网，本软件对内容的有效性和真实性不负任何责任和连带责任，如涉及纠纷，请联系源网站处理。</font></b>
+         <p>本软件不存储任何数据，也不存储用户的任何隐私信息，<b><font color="red">所有内容均来源于互联网，本软件对内容的有效性和真实性不负任何责任和连带责任，如涉及纠纷，请联系源网站处理。</font></b>
 	<br>
 本应用采用爬虫技术，将互联网上的资源整合到App内。方便搜索查找，仅供学习资料和影视娱乐，请合理使用。本应用可以结合第三方播放器（如迅雷）使用，部分国家和地区禁止使用迅雷等P2P技术请勿使用本软件，<b><font color="red">本应用所有的资源链接采自网络，不存放任何资源文件，也不提供任何资源的下载，如果涉及互联网侵权问题，请联系源网站，开发者不承担任何法律责任。</font> </b>
 </p>
