--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <title>TorrSE Website，TorrSE App</title>
 
-    <meta name="description" content="MagnetBox is a magnetic search app! Focus on the simplest, most convenient and powerful magnetic search app for searching!">
+    <meta name="description" content="TorrSE is a magnetic & torrent search app! Focus on the simplest, most convenient and powerful magnetic & torrent search app for searching!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
-    <meta property="og:title" content="MagnetBox">
+    <meta property="og:title" content="TorrSE">
     <meta property="og:description" content="MagnetBoxWebsite">
     <meta name="apple-mobile-web-app-title" content="MagnetBox">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -179,7 +179,7 @@
             </div>
 
             <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.6s">
-                <a href="https://www.lanzous.com/b414052/"
+                <a href="https://www.lanzous.com/b518756/"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">国内</a>
             </div>
