--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <span class="icon icon-bar"></span>
                 <span class="icon icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand"><span>Magnet</span>Box</a>
+            <a href="#" class="navbar-brand"><span>Torr</span>SE</a>
         </div>
 
         <div class="collapse navbar-collapse">
