--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div class="wow fadeInUp col-md-6 col-sm-5 col-xs-10 col-xs-offset-1 col-sm-offset-0 animated"
                  data-wow-delay="0.2s"   style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;" >
-                <img src="https://seedboxs.me/static/appwebsite/home-img.png" class="img-responsive" alt="Home">
+                <img src="/static/appwebsite/home-img.png" class="img-responsive" alt="Home">
             </div>
 
             <div class="col-md-6 col-sm-7 col-xs-12">
