--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
-    <link rel="shortcut icon" href="https://seedboxs.me/static/appwebsite/favicon.ico' %}" />
+    <link rel="shortcut icon" href="/static/appwebsite/favicon.ico' %}" />
 
-    <link rel="stylesheet" href="https://seedboxs.me/static/appwebsite/bootstrap.min.css" charset="UTF-8">
-    <link rel="stylesheet" href="https://seedboxs.me/static/appwebsite/animate.css" charset="UTF-8">
+    <link rel="stylesheet" href="/static/appwebsite/bootstrap.min.css" charset="UTF-8">
+    <link rel="stylesheet" href="/static/appwebsite/animate.css" charset="UTF-8">
     <!--<link rel="stylesheet" href="./appwebsite/fontawesome.min.css" charset="UTF-8">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://seedboxs.me/static/appwebsite/magnific-popup.css" charset="UTF-8">
-    <link rel="stylesheet" href="https://seedboxs.me/static/appwebsite/owl.theme.css" charset="UTF-8">
-    <link rel="stylesheet" href="https://seedboxs.me/static/appwebsite/owl.carousel.css" charset="UTF-8">
+    <link rel="stylesheet" href="/static/appwebsite/magnific-popup.css" charset="UTF-8">
+    <link rel="stylesheet" href="/static/appwebsite/owl.theme.css" charset="UTF-8">
+    <link rel="stylesheet" href="/static/appwebsite/owl.carousel.css" charset="UTF-8">
 
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet" type="text/css" charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700" rel="stylesheet" type="text/css" charset="UTF-8">
     <!-- Main css -->
-    <link rel="stylesheet" href="https://seedboxs.me/static/appwebsite/style.css" charset="UTF-8">
+    <link rel="stylesheet" href="/static/appwebsite/style.css" charset="UTF-8">
 
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 <div class="adcenter">
-    <script src="https://seedboxs.me/static/appwebsite/ggad2_728x90.js"></script>
+    <script src="/static/appwebsite/ggad2_728x90.js"></script>
 </div>
 
 <!-- PRE LOADER -->
@@ -123,32 +123,32 @@
             <div id="screenshot-carousel" class="owl-carousel">
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="https://seedboxs.me/static/appwebsite/screenshot-img1.jpg" class="image-popup">
-                        <img src="https://seedboxs.me/static/appwebsite/screenshot-img1.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img1.jpg" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img1.jpg" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="https://seedboxs.me/static/appwebsite/screenshot-img2.jpg" class="image-popup">
-                        <img src="https://seedboxs.me/static/appwebsite/screenshot-img2.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img2.jpg" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img2.jpg" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="https://seedboxs.me/static/appwebsite/screenshot-img3.jpg" class="image-popup">
-                        <img src="https://seedboxs.me/static/appwebsite/screenshot-img3.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img3.jpg" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img3.jpg" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="https://seedboxs.me/static/appwebsite/screenshot-img4.jpg" class="image-popup">
-                        <img src="https://seedboxs.me/static/appwebsite/screenshot-img4.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img4.jpg" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img4.jpg" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="https://seedboxs.me/static/appwebsite/screenshot-img5.jpg" class="image-popup">
-                        <img src="https://seedboxs.me/static/appwebsite/screenshot-img5.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img5.jpg" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img5.jpg" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
@@ -228,14 +228,14 @@
 
 <!-- SCRIPTS -->
 
-<script src="https://seedboxs.me/static/appwebsite/jquery.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/bootstrap.min.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/jquery.magnific-popup.min.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/magnific-popup-options.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/owl.carousel.min.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/smoothscroll.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/wow.min.js"></script>
-<script src="https://seedboxs.me/static/appwebsite/custom.js"></script>
+<script src="/static/appwebsite/jquery.js"></script>
+<script src="/static/appwebsite/bootstrap.min.js"></script>
+<script src="/static/appwebsite/jquery.magnific-popup.min.js"></script>
+<script src="/static/appwebsite/magnific-popup-options.js"></script>
+<script src="/static/appwebsite/owl.carousel.min.js"></script>
+<script src="/static/appwebsite/smoothscroll.js"></script>
+<script src="/static/appwebsite/wow.min.js"></script>
+<script src="/static/appwebsite/custom.js"></script>
 
 
 </body>
