--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>TorrSE Website，TorrSE App</title>
 
-    <meta name="description" content="TorrSE is a magnetic & torrent search app! Focus on the simplest, most convenient and powerful magnetic & torrent search app for searching!">
+    <meta name="description" content="TorrSE: Best full-featured torrent search app! Focus on the simplest, most convenient and powerful magnetic & torrent search app for searching!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
@@ -94,7 +94,7 @@
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
                         style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">TorrSE is a magnetic & torrent search app! Focus on the simplest, most convenient and powerful magnetic & torrent search app for searching!</p>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">TorrSE: Best full-featured torrent search app! Focus on the simplest, most convenient and powerful magnetic & torrent search app for searching!</p>
                     <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                        style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
                 </div>
