--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-        <h2 align="center">Privacy Policy<h2>
+        <h2 align="center">Privacy Policy</h2>
         <p>TorrSE integrates Admob and Firebase third-party services, and the statistics that may be included include the following (depending on your device settings):</p>
         <p>1.Information about your device</p>
         <p>2.Mobile device identification</p>
