--- a/clhz_en_protocol.html
+++ b/clhz_en_protocol.html
@@ -17,6 +17,7 @@
         </p>
         <h3>Privacy Policy</h3>
         <p>TorrSE integrates Admob and Firebase third-party services, and the statistics that may be included include the following (depending on your device settings):
+        <br>
         <br>1.Information about your device
         <br>2.Mobile device identification
         <br>3.Record your approximate location and put the right ads into you
@@ -28,5 +29,5 @@
         <h3>Changes to Terms of Use & Privacy Policy</h3>
         <p>We may update our Terms of Use & Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes accessing app settings page. These changes are effective immediately after they are posted on this page</p>
         <h3>Contact Us</h3>
-        <p>If you have any questions or suggestions about our Terms of Use & Privacy Policy, do not hesitate to contact us at <b><font color="blue">app.torrse@gmail.com</font></b></p>
+        <p>If you have any questions or suggestions about our Terms of Use & Privacy Policy, do not hesitate to contact us at <b><font color="blue">["app.torrse@gmail.com"]</font></b></p>
 </html>
