--- a/clhz_cn_protocol.html
+++ b/clhz_cn_protocol.html
@@ -11,20 +11,20 @@
         <h3>4.用户使用须知</h3>
         <p>4.1软件功能：本软件工作原理类似于浏览器，内容解析自基于DHT协议的BT资源搜索引擎网站，所有资源来源于对端网站爬虫24小时从DHT网络自动抓取，所有排行数据由程序自动生成。我们不存储任何资源和种子文件，只索引种子meta信息并提供搜索服务。</p>
         <h3>5.免责声明</h3>
-         <p>本软件不存储任何数据，也不存储用户的任何隐私信息，<b><font color="red">所有内容均来源于互联网，本软件对内容的有效性和真实性不负任何责任和连带责任，如涉及纠纷，请联系源网站处理。</font></b>
+        <p>本软件不存储任何数据，也不存储用户的任何隐私信息，<b><font color="red">所有内容均来源于互联网，本软件对内容的有效性和真实性不负任何责任和连带责任，如涉及纠纷，请联系源网站处理。</font></b>
 	<br><br>本应用采用爬虫技术，将互联网上的资源整合到App内。方便搜索查找，仅供学习资料和影视娱乐，请合理使用。本应用可以结合第三方播放器（如迅雷）使用，部分国家和地区禁止使用迅雷等P2P技术请勿使用本软件，<b><font color="red">本应用所有的资源链接采自网络，不存放任何资源文件，也不提供任何资源的下载，如果涉及互联网侵权问题，请联系源网站，开发者不承担任何法律责任。</font> </b></p>
 	<h3>隐私政策</h3>
-<p>TorrSE集成了Admob和Firebase第三方服务，可能包含的统计信息包括以下内容（具体取决于您的设备设置）：
-<br><br>1.有关您设备的信息
-<br>2.移动设备标识
-<br>3.记录您的大致位置并将正确的广告投放到您的手中
-<br>4.存储软件生成的数据
-<br>5.使用年限
-<br>6.操作计数</p>
-<p>有关详细信息，请参阅官方Admob和Firebase说明。</p>
-<p>选择使用TorrSE，即表示您同意收集和使用与此政策相关的信息。除非本隐私政策另有规定，否则我们不会与任何人一起使用或分享您的信息。</p>
-<h3>使用条款和隐私政策的变更</h3>
-<p>我们可能会不时更新我们的使用条款和隐私政策。因此，建议您定期查看此页面，了解访问应用程序设置页面的任何更改。这些更改在此页面上发布后立即生效。</p>
-<h3>联系我们</h3>
-<p>如果您对我们的使用条款和隐私政策有任何疑问或建议，请随时通过<b><font color="blue">a p p . t o r r s e @ g m a i l . c o m</font></b>与我们联系。</p>
+	<p>TorrSE集成了Admob和Firebase第三方服务，可能包含的统计信息包括以下内容（具体取决于您的设备设置）：
+	<br><br>1.有关您设备的信息
+	<br>2.移动设备标识
+	<br>3.记录您的大致位置并将正确的广告投放到您的手中
+	<br>4.存储软件生成的数据
+	<br>5.使用时长
+	<br>6.启动次数</p>
+	<p>有关详细信息，请参阅官方Admob和Firebase说明。</p>
+	<p>选择使用TorrSE，即表示您同意收集和使用与此政策相关的信息。除非本隐私政策另有规定，否则我们不会与任何人一起使用或分享您的信息。</p>
+	<h3>使用条款和隐私政策的变更</h3>
+	<p>我们可能会不时更新我们的使用条款和隐私政策。因此，建议您定期查看此页面，了解访问应用程序设置页面的任何更改。这些更改在此页面上发布后立即生效。</p>
+	<h3>联系我们</h3>
+	<p>如果您对我们的使用条款和隐私政策有任何疑问或建议，请随时通过<b><font color="blue">a p p . t o r r s e @ g m a i l . c o m</font></b>与我们联系。</p>
 </html>
