--- a/clhz_ja_protocol.html
+++ b/clhz_ja_protocol.html
@@ -11,8 +11,20 @@
         <h3>4.ユーザーの指示</h3>
         <p>4.1ソフトウェア機能：このソフトウェアの動作原理はブラウザに似ており、DHTプロトコルに基づいてBTリソース検索エンジンのWebサイトから解析され、すべてのリソースがピアWebクローラーによってDHTネットワークから24時間自動的にクロールされます。 私たちはリソースとシードファイルを保存せず、インデックスシードのメタ情報だけを検索し、検索サービスを提供します。</p>
         <h3>5.免責事項</h3>
-         <p>このソフトウェアは、妥当な統計データ以外のデータを保存したり、<b><font color="red">ユーザーの個人情報を保存したりすることはありません。 処理のためにソースウェブサイトに連絡してください。</font> </b>
-<br>
-このアプリケーションは、クローラ技術を使用してインターネット上のリソースをアプリに統合します。 便利な検索と検索は、教材や映画やテレビのエンターテイメントのためにのみ、合理的にそれを使用してください。 このアプリケーションは、サードパーティのダウンローダ（Flud、μTorrentなど）と組み合わせて使用することができますが、一部の国や地域でP2Pテクノロジを使用することは禁じられています。<b><font color="red">このアプリケーションのすべてのリソースリンクはネットワークから収集され、リソースファイルは保存されず、リソースはダウンロードされません。インターネット侵害の問題が発生した場合は、ソースWebサイトに連絡してください。</font> </b>
-</p>
+        <p>このソフトウェアは、妥当な統計データ以外のデータを保存したり、<b><font color="red">ユーザーの個人情報を保存したりすることはありません。 処理のためにソースウェブサイトに連絡してください。</font> </b>
+        <br><br>このアプリケーションは、クローラ技術を使用してインターネット上のリソースをアプリに統合します。 便利な検索と検索は、教材や映画やテレビのエンターテイメントのためにのみ、合理的にそれを使用してください。 このアプリケーションは、サードパーティのダウンローダ（Flud、μTorrentなど）と組み合わせて使用することができますが、一部の国や地域でP2Pテクノロジを使用することは禁じられています。<b><font color="red">このアプリケーションのすべてのリソースリンクはネットワークから収集され、リソースファイルは保存されず、リソースはダウンロードされません。インターネット侵害の問題が発生した場合は、ソースWebサイトに連絡してください。</font> </b></p>
+         <h3>プライバシーポリシー</h3>
+	<p>TorrSEはAdmobとFirebaseのサードパーティサービスを統合しており、以下を含む統計情報を含んでいるかもしれません（あなたのデバイス設定によります）：
+	<br><br>1.お使いのデバイスに関する情報
+	<br>2.モバイル機器の識別
+	<br>3.おおよその場所を記録して、正しい広告を手に入れます。
+	<br>4.ソフトウェアによって生成されたデータを保存する
+	<br>5.使用期間
+	<br>6.スタート数</p>
+	<p>詳細については、AdmobとFirebaseの公式の指示を参照してください。</p>
+	<p>TorrSEを使用することを選択することにより、あなたはこの方針に関連する情報の収集と使用に同意することになります。 本プライバシーポリシーに別段の定めがある場合を除き、私たちはあなたの情報を他人と使用したり共有したりしません。</p>
+	<h3>利用規約とプライバシーポリシーの変更</h3>
+	<p>当社は利用規約およびプライバシーポリシーを随時更新することがあります。 したがって、[アクセスアプリケーションの設定]ページの変更については、このページを定期的に確認することをお勧めします。 これらの変更は、このページに掲載された直後に有効になります。</p>
+	<h3>お問い合わせ</h3>
+	<p>当社の利用規約およびプライバシーポリシーについてのご質問やご提案がございましたら、<b><font color="blue">a p p . t o r r s e @ g m a i l . c o m</font></b>までお気軽にお問い合わせください。</p>
 </html>
