--- a/clhz_tw_protocol.html
+++ b/clhz_tw_protocol.html
@@ -1,16 +1,16 @@
 ﻿<!DOCTYPE html>
 <p>請務必認真閱讀和理解本《軟件許可使用協議》（以下簡稱《協議》）中規定的所有權利和限制。除非您接受本《協議》條款，否則您無權下載、安裝或使用本軟件及其相關服務。您一旦安裝、复制、下載、訪問或以其它方式使用本軟件產品，將視為對本《協議》的接受，即表示您同意接受本《協議》各項條款的約束。如果您不同意本《協議》中的條款，請不要安裝、复制或使用本軟件。</p>
-<h3>1.权利声明</h3>
+<h3>权利声明</h3>
 <p>本軟件的一切知識產權，以及與軟件相關的所有信息內容，包括但不限於：文字表述及其組合、圖標、圖飾、圖像、圖表、色彩、界面設計、版面框架、有關數據、附加程序、印刷材料或電子文檔等均為開發者所有，受著作權法和國際著作權條約以及其他知識產權法律法規的保護。</p>
-<h3>2.許可範圍</h3>
-<p>2.1下載、安裝和使用：本軟件為免費軟件，用戶可以非商業性、無限制數量地下載、安裝及使用本軟件。</p>
-<p>2.2复制、分發和傳播：用戶可以非商業性、無限制數量地复制、分發和傳播本軟件產品。但必須保證每一份复制、分發和傳播都是完整和真實的包括所有有關本軟件產品的軟件、電子文檔版權和商標，亦包括本協議。</p>
-<h3>3.權利限制</h3>
-<p>3.1禁止反向工程、反向編譯和反向彙編：用戶不得對本軟件產品進行反向工程(ReverseEngineer)、反向編譯(Decompile)或反向彙編(Disassemble)，同時不得改動編譯在程序文件內部的任何資源。除法律、法規明文規定允許上述活動外，用戶必須遵守此協議限制。</p>
-<p>3.2組件分割：本軟件產品是作為一個單一產品而被授予許可使用，用戶不得將各個部分分開用於任何目的。</p>
-<h3>4.用戶使用須知</h3>
-<p>4.1軟件功能：本軟件工作原理類似於瀏覽器，內容解析自基於DHT協議的BT資源搜索引擎網站，所有資源來源於對端網站爬蟲24小時從DHT網絡自動抓取，所有排行數據由程序自動生成。我們不存儲任何資源和種子文件，只索引種子meta信息並提供搜索服務。</p>
-<h3>5.免責聲明</h3>
+<h3>許可範圍</h3>
+<p>下載、安裝和使用：本軟件為免費軟件，用戶可以非商業性、無限制數量地下載、安裝及使用本軟件。</p>
+<p>复制、分發和傳播：用戶可以非商業性、無限制數量地复制、分發和傳播本軟件產品。但必須保證每一份复制、分發和傳播都是完整和真實的包括所有有關本軟件產品的軟件、電子文檔版權和商標，亦包括本協議。</p>
+<h3>權利限制</h3>
+<p>禁止反向工程、反向編譯和反向彙編：用戶不得對本軟件產品進行反向工程(ReverseEngineer)、反向編譯(Decompile)或反向彙編(Disassemble)，同時不得改動編譯在程序文件內部的任何資源。除法律、法規明文規定允許上述活動外，用戶必須遵守此協議限制。</p>
+<p>組件分割：本軟件產品是作為一個單一產品而被授予許可使用，用戶不得將各個部分分開用於任何目的。</p>
+<h3>用戶使用須知</h3>
+<p>軟件功能：本軟件工作原理類似於瀏覽器，內容解析自基於DHT協議的BT資源搜索引擎網站，所有資源來源於對端網站爬蟲24小時從DHT網絡自動抓取，所有排行數據由程序自動生成。我們不存儲任何資源和種子文件，只索引種子meta信息並提供搜索服務。</p>
+<h3>免責聲明</h3>
 <p>本軟件不存儲任何數據，也不存儲用戶的任何隱私信息，<b><font color="red">所有內容均來源於互聯網，本軟件對內容的有效性和真實性不負任何責任和連帶責任，如涉及糾紛，請聯繫源網站處理。</font> </b>
 <br><br>本應用採用爬蟲技術，將互聯網上的資源整合到App內。方便搜索查找，僅供學習資料和影視娛樂，請合理使用。本應用可以結合第三方播放器（如迅雷）使用，部分國家和地區禁止使用迅雷等P2P技術請勿使用本軟件，<b><font color="red">本應用所有的資源鏈接採自網絡，不存放任何資源文件，也不提供任何資源的下載，如果涉及互聯網侵權問題，請聯繫源網站，開發者不承擔任何法律責任。</font> </b></p>
 <h3>隱私政策</h3>
