--- a/clhz_tw_protocol.html
+++ b/clhz_tw_protocol.html
@@ -11,7 +11,7 @@
 <h3>用戶使用須知</h3>
 <p>軟件功能：本軟件工作原理類似於瀏覽器，內容解析自基於DHT協議的BT資源搜索引擎網站，所有資源來源於對端網站爬蟲24小時從DHT網絡自動抓取，所有排行數據由程序自動生成。我們不存儲任何資源和種子文件，只索引種子meta信息並提供搜索服務。</p>
 <h3>免責聲明</h3>
-<p>本軟件不存儲任何數據，也不存儲用戶的任何隱私信息，<b><font color="red">所有內容均來源於互聯網，本軟件對內容的有效性和真實性不負任何責任和連帶責任，如涉及糾紛，請聯繫源網站處理。</font> </b>
+<p>本軟件不存儲除合理統計數據之外的任何數據，也不存儲用戶的任何隱私信息，<b><font color="red">所有內容均來源於互聯網，本軟件對內容的有效性和真實性不負任何責任和連帶責任，如涉及糾紛，請聯繫源網站處理。</font> </b>
 <br><br>本應用採用爬蟲技術，將互聯網上的資源整合到App內。方便搜索查找，僅供學習資料和影視娛樂，請合理使用。本應用可以結合第三方播放器（如迅雷）使用，部分國家和地區禁止使用迅雷等P2P技術請勿使用本軟件，<b><font color="red">本應用所有的資源鏈接採自網絡，不存放任何資源文件，也不提供任何資源的下載，如果涉及互聯網侵權問題，請聯繫源網站，開發者不承擔任何法律責任。</font> </b></p>
 <h3>隱私政策</h3>
 <p>TorrSE集成了Admob和Firebase第三方服務，可能包含的統計信息包括以下內容（具體取決於您的設備設置）：
