--- a/clhz_ja_protocol.html
+++ b/clhz_ja_protocol.html
@@ -11,7 +11,7 @@
 <h3>ユーザーの指示</h3>
 <p>ソフトウェア機能：このソフトウェアの動作原理はブラウザに似ており、DHTプロトコルに基づいてBTリソース検索エンジンのWebサイトから解析され、すべてのリソースがピアWebクローラーによってDHTネットワークから24時間自動的にクロールされます。 私たちはリソースとシードファイルを保存せず、インデックスシードのメタ情報だけを検索し、検索サービスを提供します。</p>
 <h3>免責事項</h3>
-<p>このソフトウェアは、妥当な統計データ以外のデータを保存したり、<b><font color="red">ユーザーの個人情報を保存したりすることはありません。 処理のためにソースウェブサイトに連絡してください。</font> </b>
+<p>このソフトウェアは、妥当な統計データ以外のデータを保存したり、ユーザーの個人情報を保存したりすることはありません。<b><font color="red"> すべてのコンテンツはインターネットからのものです。 本ソフトウェアは、紛争などのコンテンツの有効性または信頼性について一切責任を負いません。 処理についてはソースのWebサイトに連絡してください。</font> </b>
 <br><br>このアプリケーションは、クローラ技術を使用してインターネット上のリソースをアプリに統合します。 便利な検索と検索は、教材や映画やテレビのエンターテイメントのためにのみ、合理的にそれを使用してください。 このアプリケーションは、サードパーティのダウンローダ（Flud、μTorrentなど）と組み合わせて使用することができますが、一部の国や地域でP2Pテクノロジを使用することは禁じられています。<b><font color="red">このアプリケーションのすべてのリソースリンクはネットワークから収集され、リソースファイルは保存されず、リソースはダウンロードされません。インターネット侵害の問題が発生した場合は、ソースWebサイトに連絡してください。</font> </b></p>
 <h3>プライバシーポリシー</h3>
 <p>TorrSEはAdmobとFirebaseのサードパーティサービスを統合しており、以下を含む統計情報を含んでいるかもしれません（あなたのデバイス設定によります）：
