--- a/clhz_ja_protocol.html
+++ b/clhz_ja_protocol.html
@@ -11,7 +11,7 @@
 <h3>ユーザーの指示</h3>
 <p>ソフトウェア機能：このソフトウェアの動作原理はブラウザに似ており、DHTプロトコルに基づいてBTリソース検索エンジンのWebサイトから解析され、すべてのリソースがピアWebクローラーによってDHTネットワークから24時間自動的にクロールされます。 私たちはリソースとシードファイルを保存せず、インデックスシードのメタ情報だけを検索し、検索サービスを提供します。</p>
 <p>検索した結果は、入力したキーワードに基づいて自動的に取得および生成されます。ソフトウェアが検索対象となっているサードパーティのWebページ上のコンテンツや位置を表すものではありません。</p>
-<p>あなたはあなたのソフトウェアの使用の結果に対して単独で責任を負うべきです。 ソフトウェアはいかなる形でも保証するものではありません。検索結果がお客様の要件を満たすことを保証するものではなく、検索サービスが中断されないことを保証するものでもありません。 ネットワークの状況、通信回線、第三者のWebサイトなどのために、磁気検索を通常使用できない場合があります磁気検索は法的責任を負いません。</p>
+<p>あなたはあなたのソフトウェアの使用の結果に対して単独で責任を負うべきです。 ソフトウェアはいかなる形でも保証するものではありません。検索結果がお客様の要件を満たすことを保証するものではなく、検索サービスが中断されないことを保証するものでもありません。 本ソフトウェアは、ネットワークの状況、通信回線、サードパーティのWebサイトなどのために本ソフトウェアを使用しなかった場合、いかなる法的責任も負いません。</p>
 <h3>免責事項</h3>
 <p>このソフトウェアは、妥当な統計データ以外のデータを保存したり、ユーザーの個人情報を保存したりすることはありません。<b><font color="red"> すべてのコンテンツはインターネットからのものです。 本ソフトウェアは、紛争などのコンテンツの有効性または信頼性について一切責任を負いません。 処理についてはソースのWebサイトに連絡してください。</font> </b>
 <br><br>このアプリケーションは、クローラ技術を使用してインターネット上のリソースをアプリに統合します。 便利な検索と検索は、教材や映画やテレビのエンターテイメントのためにのみ、合理的にそれを使用してください。 このアプリケーションは、サードパーティのダウンローダ（Flud、μTorrentなど）と組み合わせて使用することができますが、一部の国や地域でP2Pテクノロジを使用することは禁じられています。<b><font color="red">このアプリケーションのすべてのリソースリンクはネットワークから収集され、リソースファイルは保存されず、リソースはダウンロードされません。インターネット侵害の問題が発生した場合は、ソースWebサイトに連絡してください。</font> </b></p>
