--- a/clhz_ko_protocol.html
+++ b/clhz_ko_protocol.html
@@ -11,11 +11,11 @@
 <h3>사용자 지침</h3>
 <p>소프트웨어 기능 :이 소프트웨어의 작동 원리는 브라우저와 유사하며 DHT 프로토콜을 기반으로 BT 리소스 검색 엔진 웹 사이트에서 파싱됩니다. 모든 리소스는 DHT 네트워크에서 피어 웹 크롤러에 의해 24 시간 동안 자동으로 크롤링되며 모든 랭킹 데이터는 프로그램에서 자동으로 생성됩니다. 우리는 어떤 자원 및 씨앗 파일도 저장하지 않고, 오직 종자의 메타 정보만을 색인하고 검색 서비스를 제공합니다</p>
 <p>검색 한 결과는 입력 한 키워드를 기반으로 자동으로 생성되고 생성되며 타사 웹 페이지에서 해당 소프트웨어가 검색되기 쉬운 위치를 나타내지 않습니다.</p>
-<p>이 소프트웨어를 사용한 검색 결과에 대한 전적인 책임은 귀하에게 있습니다. 소프트웨어는 어떠한 형태로든 보증하지 않습니다. 검색 결과가 귀하의 요구 사항을 충족시킬 것이라는 보장이 없으며 검색 서비스가 중단되지 않을 것이며 검색 결과의 보안, 정확성, 적시성 및 적법성이 보장되지 않습니다. 네트워크 상태, 통신 회선, 제 3 자 웹 사이트 등으로 인해 자기 검색을 정상적으로 사용할 수 없을 수도 있습니다. 자기 검색은 법적 책임을지지 않습니다.</p>
+<p>이 소프트웨어를 사용한 검색 결과에 대한 전적인 책임은 귀하에게 있습니다. 소프트웨어는 어떠한 형태로든 보증하지 않습니다. 검색 결과가 귀하의 요구 사항을 충족시킬 것이라는 보장이 없으며 검색 서비스가 중단되지 않을 것이며 검색 결과의 보안, 정확성, 적시성 및 적법성이 보장되지 않습니다. 소프트웨어는 네트워크 상태, 통신 회선, 제 3 자 웹 사이트 등으로 인해 소프트웨어 사용에 대한 어떠한 법적 책임도지지 않습니다.</p>
 <h3>면책 조항</h3>
 <p>이 소프트웨어는 합리적인 통계 데이터 이외의 데이터를 저장하지 않으며 사용자의 개인 정보를 저장하지 <b><font color="red"> 않으며 모든 콘텐츠는 인터넷에서 가져온 것입니다. 소프트웨어는 분쟁 등 콘텐츠의 유효성 및 신뢰성에 대해 책임을지지 않습니다. 처리를 위해 출처 웹 사이트에 연락하십시오</font> </b>
 <br>이 응용 프로그램은 크롤러 기술을 사용하여 인터넷의 리소스를 응용 프로그램에 통합합니다. 검색 자료 및 영화 및 TV 엔터테인먼트 용으로 만 검색하고 검색 할 수 있으므로 합리적으로 사용하십시오. 이 응용 프로그램은 타사 다운로더 (예 : Flud, μTorrent)와 함께 사용할 수 있습니다. 일부 국가 및 지역에서는 P2P 기술을 사용하는 것이 금지되어 있으므로이 소프트웨어를 사용하지 마십시오.<b><font color="red">이 응용 프로그램의 모든 리소스 링크는 네트워크에서 수집되며 리소스 파일은 저장되지 않으며 리소스가 다운로드되지 않습니다. 인터넷 침해 문제가 발생하면 소스 웹 사이트에 문의하십시오. 개발자는 법적 책임을지지 않습니다.</font> </b></p>
-<h3>개인 정보 보호 정책</h3>
+<h3>개인 정보 보호 정책</h3>이 소프트웨어를 사용한 검색 결과에 대한 전적인 책임은 귀하에게 있습니다. 소프트웨어는 어떠한 형태로든 보증하지 않습니다. 검색 결과가 귀하의 요구 사항을 충족시킬 것이라는 보장이 없으며 검색 서비스가 중단되지 않을 것이며 검색 결과의 보안, 정확성, 적시성 및 적법성이 보장되지 않습니다. 소프트웨어는 네트워크 상태, 통신 회선, 제 3 자 웹 사이트 등으로 인해 소프트웨어 사용에 대한 어떠한 법적 책임도지지 않습니다.
 <p>TorrSE는 Admob 및 Firebase 타사 서비스를 통합하며 장치 설정에 따라 다음과 같은 통계를 포함 할 수 있습니다:
 <br><br>1. 귀하의 장치에 대한 정보
 <br>2. 모바일 장치 식별
