--- a/clhz_cn_protocol.html
+++ b/clhz_cn_protocol.html
@@ -16,14 +16,14 @@
 <p>本软件不存储除合理统计数据之外的任何数据，也不存储用户的任何隐私信息，<b><font color="red">所有内容均来源于互联网，本软件对内容的有效性和真实性不负任何责任和连带责任，如涉及纠纷，请联系源网站处理。</font></b>
 <br><br>本应用采用爬虫技术，将互联网上的资源整合到App内。方便搜索查找，仅供学习资料和影视娱乐，请合理使用。本应用可以结合第三方播放器（如迅雷）使用，部分国家和地区禁止使用迅雷等P2P技术请勿使用本软件，<b><font color="red">本应用所有的资源链接采自网络，不存放任何资源文件，也不提供任何资源的下载，如果涉及互联网侵权问题，请联系源网站，开发者不承担任何法律责任。</font> </b></p>
 <h3>隐私政策</h3>
-<p>TorrSE集成了Admob和Firebase第三方服务，可能包含的统计信息包括以下内容（具体取决于您的设备设置）：
+<p>TorrSE集成了Admob，Firebase Analytics和Google Play服务第三方服务，可能包含的统计信息包括以下内容（具体取决于您的设备设置）：
 <br><br>1.有关您设备的信息
 <br>2.移动设备标识
 <br>3.记录您的大致位置并将正确的广告投放到您的手中
 <br>4.存储软件生成的数据
 <br>5.使用时长
 <br>6.启动次数</p>
-<p>有关详细信息，请参阅官方Admob和Firebase说明。</p>
+<p>有关详细信息，请参阅官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服务</a>说明。</p>
 <p>选择使用TorrSE，即表示您同意收集和使用与此政策相关的信息。除非本隐私政策另有规定，否则我们不会与任何人一起使用或分享您的信息。</p>
 <h3>使用条款和隐私政策的变更</h3>
 <p>我们可能会不时更新我们的使用条款和隐私政策。因此，建议您定期查看此页面，了解访问应用程序设置页面的任何更改。这些更改在此页面上发布后立即生效。</p>
