--- a/clhz_tw_protocol.html
+++ b/clhz_tw_protocol.html
@@ -16,14 +16,14 @@
 <p>本軟件不存儲除合理統計數據之外的任何數據，也不存儲用戶的任何隱私信息，<b><font color="red">所有內容均來源於互聯網，本軟件對內容的有效性和真實性不負任何責任和連帶責任，如涉及糾紛，請聯繫源網站處理。</font> </b>
 <br><br>本應用採用爬蟲技術，將互聯網上的資源整合到App內。方便搜索查找，僅供學習資料和影視娛樂，請合理使用。本應用可以結合第三方播放器（如迅雷）使用，部分國家和地區禁止使用迅雷等P2P技術請勿使用本軟件，<b><font color="red">本應用所有的資源鏈接採自網絡，不存放任何資源文件，也不提供任何資源的下載，如果涉及互聯網侵權問題，請聯繫源網站，開發者不承擔任何法律責任。</font> </b></p>
 <h3>隱私政策</h3>
-<p>TorrSE集成了Admob和Firebase第三方服務，可能包含的統計信息包括以下內容（具體取決於您的設備設置）：
+<p>TorrSE集成了Admob，Firebase Analytics和Google Play服務第三方服務，可能包含的統計信息包括以下內容（具體取決於您的設備設置）：
 <br><br>1.有關您設備的信息
 <br>2.移動設備標識
 <br>3.記錄您的大致位置並將正確的廣告投放到您的手中
 <br>4.存儲軟件生成的數據
 <br>5.使用時長
 <br>6.啟動次數</p>
-<p>有關詳細信息，請參閱官方Admob和Firebase說明。</p>
+<p>有關詳細信息，請參閱官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服務</a>說明。</p>
 <p>選擇使用TorrSE，即表示您同意收集和使用與此政策相關的信息。除非本隱私政策另有規定，否則我們不會與任何人一起使用或分享您的信息。</p>
 <h3>使用條款和隱私政策的變更</h3>
 <p>我們可能會不時更新我們的使用條款和隱私政策。因此，建議您定期查看此頁面，了解訪問應用程序設置頁面的任何更改。這些更改在此頁面上發布後立即生效。</p>
