--- a/clhz_ja_protocol.html
+++ b/clhz_ja_protocol.html
@@ -16,14 +16,14 @@
 <p>このソフトウェアは、妥当な統計データ以外のデータを保存したり、ユーザーの個人情報を保存したりすることはありません。<b><font color="red"> すべてのコンテンツはインターネットからのものです。 本ソフトウェアは、紛争などのコンテンツの有効性または信頼性について一切責任を負いません。 処理についてはソースのWebサイトに連絡してください。</font> </b>
 <br><br>このアプリケーションは、クローラ技術を使用してインターネット上のリソースをアプリに統合します。 便利な検索と検索は、教材や映画やテレビのエンターテイメントのためにのみ、合理的にそれを使用してください。 このアプリケーションは、サードパーティのダウンローダ（Flud、μTorrentなど）と組み合わせて使用することができますが、一部の国や地域でP2Pテクノロジを使用することは禁じられています。<b><font color="red">このアプリケーションのすべてのリソースリンクはネットワークから収集され、リソースファイルは保存されず、リソースはダウンロードされません。インターネット侵害の問題が発生した場合は、ソースWebサイトに連絡してください。</font> </b></p>
 <h3>プライバシーポリシー</h3>
-<p>TorrSEはAdmobとFirebaseのサードパーティサービスを統合しており、以下を含む統計情報を含んでいるかもしれません（あなたのデバイス設定によります）：
+<p>TorrSEは、Admob、Firebase Analytics、およびGoogle Playサービスのサードパーティサービスを統合しており、以下のような統計情報が含まれている場合があります（お使いのデバイスの設定に応じて）:
 <br><br>1.お使いのデバイスに関する情報
 <br>2.モバイル機器の識別
 <br>3.おおよその場所を記録して、正しい広告を手に入れます。
 <br>4.ソフトウェアによって生成されたデータを保存する
 <br>5.使用期間
 <br>6.スタート数</p>
-<p>詳細については、AdmobとFirebaseの公式の指示を参照してください。</p>
+<p>詳しくは、<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>、<a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>、および<a href="https://www.google.com/policies/privacy/" target="_blank">Google Playサービス</a>の公式の手順をご覧ください。</p>
 <p>TorrSEを使用することを選択することにより、あなたはこの方針に関連する情報の収集と使用に同意することになります。 本プライバシーポリシーに別段の定めがある場合を除き、私たちはあなたの情報を他人と使用したり共有したりしません。</p>
 <h3>利用規約とプライバシーポリシーの変更</h3>
 <p>当社は利用規約およびプライバシーポリシーを随時更新することがあります。 したがって、[アクセスアプリケーションの設定]ページの変更については、このページを定期的に確認することをお勧めします。 これらの変更は、このページに掲載された直後に有効になります。</p>
