--- a/clhz_ko_protocol.html
+++ b/clhz_ko_protocol.html
@@ -16,14 +16,14 @@
 <p>이 소프트웨어는 합리적인 통계 데이터 이외의 데이터를 저장하지 않으며 사용자의 개인 정보를 저장하지 <b><font color="red"> 않으며 모든 콘텐츠는 인터넷에서 가져온 것입니다. 소프트웨어는 분쟁 등 콘텐츠의 유효성 및 신뢰성에 대해 책임을지지 않습니다. 처리를 위해 출처 웹 사이트에 연락하십시오</font> </b>
 <br>이 응용 프로그램은 크롤러 기술을 사용하여 인터넷의 리소스를 응용 프로그램에 통합합니다. 검색 자료 및 영화 및 TV 엔터테인먼트 용으로 만 검색하고 검색 할 수 있으므로 합리적으로 사용하십시오. 이 응용 프로그램은 타사 다운로더 (예 : Flud, μTorrent)와 함께 사용할 수 있습니다. 일부 국가 및 지역에서는 P2P 기술을 사용하는 것이 금지되어 있으므로이 소프트웨어를 사용하지 마십시오.<b><font color="red">이 응용 프로그램의 모든 리소스 링크는 네트워크에서 수집되며 리소스 파일은 저장되지 않으며 리소스가 다운로드되지 않습니다. 인터넷 침해 문제가 발생하면 소스 웹 사이트에 문의하십시오. 개발자는 법적 책임을지지 않습니다.</font> </b></p>
 <h3>개인 정보 보호 정책</h3>이 소프트웨어를 사용한 검색 결과에 대한 전적인 책임은 귀하에게 있습니다. 소프트웨어는 어떠한 형태로든 보증하지 않습니다. 검색 결과가 귀하의 요구 사항을 충족시킬 것이라는 보장이 없으며 검색 서비스가 중단되지 않을 것이며 검색 결과의 보안, 정확성, 적시성 및 적법성이 보장되지 않습니다. 소프트웨어는 네트워크 상태, 통신 회선, 제 3 자 웹 사이트 등으로 인해 소프트웨어 사용에 대한 어떠한 법적 책임도지지 않습니다.
-<p>TorrSE는 Admob 및 Firebase 타사 서비스를 통합하며 장치 설정에 따라 다음과 같은 통계를 포함 할 수 있습니다:
+<p>TorrSE는 Admob, Firebase Analytics 및 Google Play 서비스 타사 서비스를 통합하며 장치 설정에 따라 다음과 같은 통계를 포함 할 수 있습니다:
 <br><br>1. 귀하의 장치에 대한 정보
 <br>2. 모바일 장치 식별
 <br>3. 대략적인 위치를 기록하고 올바른 광고를 손에 넣으십시오.
 <br>4. 소프트웨어에 의해 생성 된 데이터 저장
 <br>5. 사용 기간
 <br>6. 시작 횟수</p>
-<p>자세한 정보는 공식 Admob 및 Firebase 지침을 참조하십시오.</p>
+<p>자세한 내용은 공식 <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> 및 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play 서비스</a> 지침을 참조하십시오</p>
 <p>TorrSE 사용을 선택하면이 정책과 관련된 정보 수집 및 사용에 동의하게됩니다. 우리는이 개인 정보 보호 정책에 달리 규정 된 경우를 제외하고는 누구와도 귀하의 정보를 사용하거나 공유하지 않을 것입니다.</p>
 <h3>이용 약관 및 개인 정보 보호 정책 변경</h3>
 <p>우리는 때때로 이용 약관 및 개인 정보 보호 정책을 업데이트 할 수 있습니다. 따라서 액세스 응용 프로그램 설정 페이지의 변경 사항에 대해이 페이지를 주기적으로 검토하는 것이 좋습니다. 이 변경 사항은이 페이지에 게시 된 후 즉시 적용됩니다.</p>
