--- a/clhz_tw_protocol.html
+++ b/clhz_tw_protocol.html
@@ -9,7 +9,7 @@
 <p>禁止反向工程、反向編譯和反向彙編：用戶不得對本軟件產品進行反向工程(ReverseEngineer)、反向編譯(Decompile)或反向彙編(Disassemble)，同時不得改動編譯在程序文件內部的任何資源。除法律、法規明文規定允許上述活動外，用戶必須遵守此協議限制。</p>
 <p>組件分割：本軟件產品是作為一個單一產品而被授予許可使用，用戶不得將各個部分分開用於任何目的。</p>
 <h3>用戶使用須知</h3>
-<p>軟件功能：本軟件工作原理類似於瀏覽器，內容解析自基於DHT協議的BT資源搜索引擎網站，所有資源來源於對端網站爬蟲24小時從DHT網絡自動抓取，所有排行數據由程序自動生成。我們不存儲任何資源和種子文件，只索引種子meta信息並提供搜索服務。</p>
+<p>軟件功能：本軟件工作原理類似於瀏覽器，內容解析自基於DHT協議的BT資源搜索引擎網站，所有資源來源於對端網站爬蟲24小時從DHT網絡自動抓取，所有排行數據由程序自動生成。我們不存儲任何資源和種子文件，只索引種子元數據信息並提供搜索服務。</p>
 <p>你搜索到的結果是根據您輸入的關鍵字自動搜索獲得併生成，不代表本軟件贊成被搜索鏈接到的第三方網頁上的內容或立場。</p>
 <p>您應該對使用本軟件搜索到的結果自行承擔風險。本軟件不做任何形式的保證：不保證搜索結果滿足您的要求，不保證搜索服務不中斷，不保證搜索結果的安全性、正確性、及時性、合法性。因網絡狀況、通訊線路、第三方網站等任何原因而導致您不能正常使用本軟件，本軟件不承擔任何法律責任。</p>
 <h3>免責聲明</h3>
