--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
-
+<meta name="google-site-verification" content="iH80ciKal7PM5d-EFeOZSfqUhv0gIzuuDfhSXuZcqxw" />
     <title>TorrSE Website，TorrSE App</title>
 
     <meta name="description" content="TorrSE: Best full-featured torrent search app! Focus on the simplest, most convenient and powerful torrent search app for searching!">
