--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
-<meta name="google-site-verification" content="iH80ciKal7PM5d-EFeOZSfqUhv0gIzuuDfhSXuZcqxw" />
+
     <title>TorrSE Website，TorrSE App</title>
 
     <meta name="description" content="TorrSE: Best full-featured torrent search app! Focus on the simplest, most convenient and powerful torrent search app for searching!">
@@ -22,6 +22,16 @@
     <meta name="apple-mobile-web-app-title" content="MagnetBox">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
+    <meta name="google-site-verification" content="iH80ciKal7PM5d-EFeOZSfqUhv0gIzuuDfhSXuZcqxw" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133439120-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-133439120-1');
+    </script>
 
 
     <link rel="shortcut icon" href="/static/appwebsite/favicon.ico' %}" />
