--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
 
             <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
-                <a href="https://play.google.com/store/apps/details?id=com.yyp.seedboxs"
+                <a href="https://play.google.com/store/apps/details?id=com.torrse.torrentsearch"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
             </div>
@@ -208,7 +208,7 @@
             <div class="col-md-8 col-sm-6">
                 <div class="wow fadeInUp footer-copyright animated" data-wow-delay="0.4s"
                      style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                    <p>©2018 SeedBoxs All Rights Reserved</p>
+                    <p>©2019 SeedBoxs All Rights Reserved</p>
                 </div>
             </div>
 
