--- a/clhz_cn_protocol.html
+++ b/clhz_cn_protocol.html
@@ -20,7 +20,7 @@
 <br><br>1.有关您设备的信息
 <br>2.移动设备标识
 <br>3.记录您的大致位置并将正确的广告投放到您的手中
-<br>4.存储软件生成的数据
+<br>4.本地存储软件生成的数据
 <br>5.使用时长
 <br>6.启动次数</p>
 <p>有关详细信息，请参阅官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服务</a>说明。</p>
