--- a/clhz_tw_protocol.html
+++ b/clhz_tw_protocol.html
@@ -20,7 +20,7 @@
 <br><br>1.有關您設備的信息
 <br>2.移動設備標識
 <br>3.記錄您的大致位置並將正確的廣告投放到您的手中
-<br>4.存儲軟件生成的數據
+<br>4.本地存儲軟件生成的數據
 <br>5.使用時長
 <br>6.啟動次數</p>
 <p>有關詳細信息，請參閱官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服務</a>說明。</p>
