--- a/clhz_ja_protocol.html
+++ b/clhz_ja_protocol.html
@@ -20,7 +20,7 @@
 <br><br>1.お使いのデバイスに関する情報
 <br>2.モバイル機器の識別
 <br>3.おおよその場所を記録して、正しい広告を手に入れます。
-<br>4.ソフトウェアによって生成されたデータを保存する
+<br>4.ローカルストレージソフトウェアが生成したデータ
 <br>5.使用期間
 <br>6.スタート数</p>
 <p>詳しくは、<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>、<a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>、および<a href="https://www.google.com/policies/privacy/" target="_blank">Google Playサービス</a>の公式の手順をご覧ください。</p>
