--- a/clhz_ko_protocol.html
+++ b/clhz_ko_protocol.html
@@ -20,7 +20,7 @@
 <br><br>1. 귀하의 장치에 대한 정보
 <br>2. 모바일 장치 식별
 <br>3. 대략적인 위치를 기록하고 올바른 광고를 손에 넣으십시오.
-<br>4. 소프트웨어에 의해 생성 된 데이터 저장
+<br>4. 로컬 스토리지 소프트웨어가 데이터를 생성 함
 <br>5. 사용 기간
 <br>6. 시작 횟수</p>
 <p>자세한 내용은 공식 <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> 및 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play 서비스</a> 지침을 참조하십시오</p>
