--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -2,4 +2,7 @@
 <h3>About server errors</h3>
 <p>1.You can use VPN to visit</p>
 <p>2.You can modify the search source's website(After you have modified it, please disable the sync search source configuration in the settings, otherwise it will be reset each time you enter the application.)</p>
+<h3>Proxy website</h3>
+<p>1337x - https://www.xtorrentp2p.com/1337x-proxy-unblocked.html</p>
+<p>TPB - https://www.xtorrentp2p.com/piratebay-proxy.html</p>
 </html>
