--- a/clhz_en_protocol.html
+++ b/clhz_en_protocol.html
@@ -26,7 +26,7 @@ This application uses crawler technology to integrate resources on the Internet 
 <br>4.Local storage software generated data
 <br>5.Length of use
 <br>6.operation counts</p>
-<p>For more information, see the official <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> and <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a> privacy policies</p>
+<p>For more information, see the official <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> and <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a> Privacy Policy</p>
 <p>By choosing to use TorrSE, you consent to the collection and use of information related to this policy. We will not use or share your information with anyone except as otherwise stated in this Privacy Policy</p>
 <h3>Changes to Terms of Use & Privacy Policy</h3>
 <p>We may update our Terms of Use & Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes accessing app settings page. These changes are effective immediately after they are posted on this page</p>
