--- a/clhz_cn_protocol.html
+++ b/clhz_cn_protocol.html
@@ -23,7 +23,7 @@
 <br>4.本地存储软件生成的数据
 <br>5.使用时长
 <br>6.启动次数</p>
-<p>有关详细信息，请参阅官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服务</a>说明。</p>
+<p>有关详细信息，请参阅官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服务</a>隐私政策。</p>
 <p>选择使用TorrSE，即表示您同意收集和使用与此政策相关的信息。除非本隐私政策另有规定，否则我们不会与任何人一起使用或分享您的信息。</p>
 <h3>使用条款和隐私政策的变更</h3>
 <p>我们可能会不时更新我们的使用条款和隐私政策。因此，建议您定期查看此页面，了解访问应用程序设置页面的任何更改。这些更改在此页面上发布后立即生效。</p>
