--- a/protocol/torrse_tw_protocol.html
+++ b/protocol/torrse_tw_protocol.html
@@ -23,7 +23,7 @@
 <br>4.本地存儲軟件生成的數據
 <br>5.使用時長
 <br>6.啟動次數</p>
-<p>有關詳細信息，請參閱官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服務</a>說明。</p>
+<p>有關詳細信息，請參閱官方<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>和 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play服務</a>隱私政策。</p>
 <p>選擇使用TorrSE，即表示您同意收集和使用與此政策相關的信息。除非本隱私政策另有規定，否則我們不會與任何人一起使用或分享您的信息。</p>
 <h3>使用條款和隱私政策的變更</h3>
 <p>我們可能會不時更新我們的使用條款和隱私政策。因此，建議您定期查看此頁面，了解訪問應用程序設置頁面的任何更改。這些更改在此頁面上發布後立即生效。</p>
