--- a/protocol/torrse_ja_protocol.html
+++ b/protocol/torrse_ja_protocol.html
@@ -23,7 +23,7 @@
 <br>4.ローカルストレージソフトウェアが生成したデータ
 <br>5.使用期間
 <br>6.スタート数</p>
-<p>詳しくは、<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>、<a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>、および<a href="https://www.google.com/policies/privacy/" target="_blank">Google Playサービス</a>の公式の手順をご覧ください。</p>
+<p>詳しくは、<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>、<a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>、および<a href="https://www.google.com/policies/privacy/" target="_blank">Google Playサービス</a>プライバシーポリシー。</p>
 <p>TorrSEを使用することを選択することにより、あなたはこの方針に関連する情報の収集と使用に同意することになります。 本プライバシーポリシーに別段の定めがある場合を除き、私たちはあなたの情報を他人と使用したり共有したりしません。</p>
 <h3>利用規約とプライバシーポリシーの変更</h3>
 <p>当社は利用規約およびプライバシーポリシーを随時更新することがあります。 したがって、[アクセスアプリケーションの設定]ページの変更については、このページを定期的に確認することをお勧めします。 これらの変更は、このページに掲載された直後に有効になります。</p>
