--- a/protocol/torrse_ko_protocol.html
+++ b/protocol/torrse_ko_protocol.html
@@ -23,7 +23,7 @@
 <br>4. 로컬 스토리지 소프트웨어가 데이터를 생성 함
 <br>5. 사용 기간
 <br>6. 시작 횟수</p>
-<p>자세한 내용은 공식 <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> 및 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play 서비스</a> 지침을 참조하십시오</p>
+<p>자세한 내용은 공식 <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> 및 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play 서비스</a> 개인 정보 보호 정책</p>
 <p>TorrSE 사용을 선택하면이 정책과 관련된 정보 수집 및 사용에 동의하게됩니다. 우리는이 개인 정보 보호 정책에 달리 규정 된 경우를 제외하고는 누구와도 귀하의 정보를 사용하거나 공유하지 않을 것입니다.</p>
 <h3>이용 약관 및 개인 정보 보호 정책 변경</h3>
 <p>우리는 때때로 이용 약관 및 개인 정보 보호 정책을 업데이트 할 수 있습니다. 따라서 액세스 응용 프로그램 설정 페이지의 변경 사항에 대해이 페이지를 주기적으로 검토하는 것이 좋습니다. 이 변경 사항은이 페이지에 게시 된 후 즉시 적용됩니다.</p>
