--- a/protocol/torrse_hi_protocol.html
+++ b/protocol/torrse_hi_protocol.html
@@ -23,7 +23,7 @@
 <br>4. स्थानीय भंडारण सॉफ्टवेयर ने डेटा उत्पन्न किया
 <br>5. उपयोग की लंबाई
 <br>6. शुरू की संख्या</p>
-<p>अधिक जानकारी के लिए, आधिकारिक <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> और <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play सेवाएं</a> निर्देश देखें।</p>
+<p>अधिक जानकारी के लिए, आधिकारिक <a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>, <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a> और <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play सेवाएं</a> गोपनीयता नीति</p>
 <p>TorrSE का उपयोग करने का चयन करके, आप इस नीति से संबंधित जानकारी के संग्रह और उपयोग के लिए सहमति देते हैं। हम आपकी जानकारी का उपयोग या साझा नहीं करेंगे, सिवाय अन्यथा इस गोपनीयता नीति में दिए गए।</p>
 <h3>उपयोग की शर्तें और गोपनीयता नीति में परिवर्तन</h3>
 <p>हम समय-समय पर अपनी उपयोग की शर्तों और गोपनीयता नीति को अपडेट कर सकते हैं। इसलिए, हम आपको एक्सेस एप्लिकेशन सेटिंग पृष्ठ में किसी भी परिवर्तन के लिए समय-समय पर इस पृष्ठ की समीक्षा करने के लिए प्रोत्साहित करते हैं। इस पृष्ठ पर पोस्ट किए जाने के तुरंत बाद ये परिवर्तन प्रभावी हो जाते हैं।</p>
