替换置顶大图

--- a/clhz_tw_protocol.html
+++ b/clhz_tw_protocol.html
@@ -28,5 +28,5 @@
 <h3>使用條款和隱私政策的變更</h3>
 <p>我們可能會不時更新我們的使用條款和隱私政策。因此，建議您定期查看此頁面，了解訪問應用程序設置頁面的任何更改。這些更改在此頁面上發布後立即生效。</p>
 <h3>聯繫我們</h3>
-<p>如果您對我們的使用條款和隱私政策有任何疑問或建議，請隨時通過<b><font color="blue">a p p . t o r r s e @ g m a i l . c o m</font></b>與我們聯繫。ss</p>
+<p>如果您對我們的使用條款和隱私政策有任何疑問或建議，請隨時通過<b><font color="blue">a p p . t o r r s e @ g m a i l . c o m</font></b>與我們聯繫。</p>
 </html>
