更新官网图片

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
                        style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">TorrSE: The Best full-featured torrent search client! Focus on the simplest, most convenient and powerful torrent search client for searching!</p>
-                    <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
+                    <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
                        style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
                 </div>
             </div>
@@ -133,32 +133,52 @@
             <div id="screenshot-carousel" class="owl-carousel">
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="/static/appwebsite/screenshot-img1.jpg" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img1.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img1.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img1.png" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="/static/appwebsite/screenshot-img2.jpg" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img2.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img2.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img2.png" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="/static/appwebsite/screenshot-img3.jpg" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img3.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img3.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img3.png" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="/static/appwebsite/screenshot-img4.jpg" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img4.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img4.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img4.png" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
-                    <a href="/static/appwebsite/screenshot-img5.jpg" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img5.jpg" class="img-responsive" alt="screenshot">
+                    <a href="/static/appwebsite/screenshot-img5.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img5.png" class="img-responsive" alt="screenshot">
+                    </a>
+                </div>
+				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                    <a href="/static/appwebsite/screenshot-img6.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img6.png" class="img-responsive" alt="screenshot">
+                    </a>
+                </div>
+				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                    <a href="/static/appwebsite/screenshot-img7.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img7.png" class="img-responsive" alt="screenshot">
+                    </a>
+                </div>
+				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                    <a href="/static/appwebsite/screenshot-img8.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img8.png" class="img-responsive" alt="screenshot">
+                    </a>
+                </div>
+				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                    <a href="/static/appwebsite/screenshot-img9.png" class="image-popup">
+                        <img src="/static/appwebsite/screenshot-img9.png" class="img-responsive" alt="screenshot">
                     </a>
                 </div>
 
