--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
 
 
-    <link rel="shortcut icon" href="/static/appwebsite/favicon.ico' %}" />
+    <link rel="shortcut icon" href="/static/appwebsite/favicon.ico" />
 
     <link rel="stylesheet" href="/static/appwebsite/bootstrap.min.css" charset="UTF-8">
     <link rel="stylesheet" href="/static/appwebsite/animate.css" charset="UTF-8">
