--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
-    <meta property="og:description" content="MagnetBoxWebsite">
-    <meta name="apple-mobile-web-app-title" content="MagnetBox">
+    <meta property="og:description" content="TorrSE Website">
+    <meta name="apple-mobile-web-app-title" content="TorrSE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
