--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -3,4 +3,7 @@
 <p>1.The new version is a newly designed UI</p>
 <p>2.The new version is more stable</p>
 <p>3.The new version adds cache priority loading (can be enabled in settings)</p>
+<p>4.The new version adds a built-in browser (to facilitate RSS reading)</p>
+<br>
+<p>If you want to update, please click Update in Faq.</p>
 </html>
