--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -3,7 +3,7 @@
 <p>1.新版本是全新设计的UI</p>
 <p>2.新版本更加稳定</p>
 <p>3.新版本加入了缓存优先加载（你可以在设置中启用）</p>
-<p>4.新版本加入了内置浏览器(为了方便Rss阅读)</p>
+<p>4.新版本加入了内置浏览器(为了方便RSS阅读)</p>
 <br>
 <p>如果你想要更新，请在常见问题中点击更新。</p>
 </html>
