--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -5,5 +5,5 @@
 <p>3.The new version adds cache priority loading (can be enabled in settings)</p>
 <p>4.The new version adds a built-in browser (to facilitate RSS reading)</p>
 <br>
-<p>If you want to update, please click Update in Faq.</p>
+<p>If you want to update, please click UPDATE in FAQ.</p>
 </html>
