--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -5,5 +5,5 @@
 <p>3.新版本加入了缓存优先加载（你可以在设置中启用）</p>
 <p>4.新版本加入了内置浏览器(为了方便RSS阅读)</p>
 <br>
-<p>如果你想要更新，请在常见问题中点击更新。</p>
+<p>如果你想要更新，请在<b><font color="#3AD0F9">常见问题</font></b>中点击<b><font color="#3AD0F9">更新</font></b>。</p>
 </html>
