--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -5,5 +5,5 @@
 <p>3.新版本加入了緩存優先加載（你可以在設置中啟用）</p>
 <p>4.新版本加入了內置瀏覽器(為了方便RSS閱讀)</p>
 <br>
-<p>如果你想要更新，請在常見問題中點擊更新。</p>
+<p>如果你想要更新，請在<b><font color="#3AD0F9">常見問題</font></b>中點擊<b><font color="#3AD0F9">更新</font></b>。</p>
 </html>
