--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -5,5 +5,5 @@
 <p>3.The new version adds cache priority loading (can be enabled in settings)</p>
 <p>4.The new version adds a built-in browser (to facilitate RSS reading)</p>
 <br>
-<p>If you want to update, please click <b><font color="#3AD0F9">UPDATE</font></b> in <font color="#3AD0F9">FAQ</font></b>.</p>
+<p>If you want to update, please click <b><font color="#3AD0F9">UPDATE</font></b> in <b><font color="#3AD0F9">FAQ</font></b>.</p>
 </html>
