--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
                         style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best seed search client on Android! Focus on the simplest, most convenient and powerful torrent search client for searching!</p>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client for searching!</p>
                     <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
                        style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
                 </div>
